usermessages are fetched from the server

--- a/src/app/layouts/new-message/new-message.component.html
+++ b/src/app/layouts/new-message/new-message.component.html
@@ -13,7 +13,7 @@
   <ul class="messages">
     <li class="message" *ngFor="let user of this.userNames">
       <div>
-        <h5 (click)="this.showMessagesWithAUser(user.id)">
+        <h5 (click)="this.getMessagesWithAUser(user.id)">
           {{ user.userName }}
         </h5>
       </div>
