--- a/src/app/layouts/new-message/new-message.component.html
+++ b/src/app/layouts/new-message/new-message.component.html
@@ -20,3 +20,31 @@
     </li>
   </ul>
 </div>
+
+<!-- DM -->
+<div class="dm" *ngIf="messages">
+  <div>
+    <div class="dm-header">
+      <h5>{{ this.getUserName() }}</h5>
+      <i class="bi bi-x-lg" (click)="this.messages = []"></i>
+    </div>
+    <div *ngIf="messages" class="dm-messages" style="height: 18rem" #scrollMe>
+      <div class="dm-message" *ngFor="let message of this.messages">
+        <h6>{{ message.senderUserName }}</h6>
+        <p>
+          {{ message.text }}
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- <form class="input-container" [formGroup]="messageForm">
+    <input
+      type="text"
+      class="input"
+      placeholder="enter message"
+      formControlName="text"
+      (keyup.enter)="sendMessage()"
+    />
+  </form> -->
+</div>
