--- a/src/app/layouts/new-message/new-message.component.html
+++ b/src/app/layouts/new-message/new-message.component.html
@@ -26,7 +26,7 @@
   <div>
     <div class="dm-header">
       <h5>{{ this.getUserName() }}</h5>
-      <i class="bi bi-x-lg" (click)="this.messages = []"></i>
+      <i class="bi bi-x-lg" (click)="this.messages = null"></i>
     </div>
     <div *ngIf="messages" class="dm-messages" style="height: 18rem" #scrollMe>
       <div class="dm-message" *ngFor="let message of this.messages">
