--- a/src/app/layouts/new-message/new-message.component.html
+++ b/src/app/layouts/new-message/new-message.component.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-  <!-- <form class="input-container" [formGroup]="messageForm">
+  <form class="input-container" [formGroup]="messageForm">
     <input
       type="text"
       class="input"
@@ -46,5 +46,5 @@
       formControlName="text"
       (keyup.enter)="sendMessage()"
     />
-  </form> -->
+  </form>
 </div>
