--- a/src/app/components/client-requests/components/client-request/client-request.component.html
+++ b/src/app/components/client-requests/components/client-request/client-request.component.html
@@ -7,7 +7,7 @@
       <button class="send-message" (click)="startAConversation()">
         Send Message
       </button>
-      <button class="send-offer">Propose</button>
+      <button class="send-offer" (click)="openProposalModal()">Propose</button>
     </div>
   </div>
   <div class="client-request-content">
