--- a/src/app/components/client-requests/client-requests.component.html
+++ b/src/app/components/client-requests/client-requests.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 3rem; margin-left: 3rem; padding-bottom: 2rem;">
+<div style="margin-top: 3rem; margin-left: 3rem; padding-bottom: 2rem">
   <h1 style="font-weight: 300">
     <span style="font-weight: 600">Client Requests</span> Suitable for Me
   </h1>
@@ -15,6 +15,9 @@
         justify-content: center;
         align-items: center;
       "
+      (click)="
+        getClientRequests(); this.showClientRequestsUserMadeAnOffer = false
+      "
     >
       Show All Client Requests
     </div>
@@ -30,6 +33,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+      "
+      (click)="
+        getRequestsUserMadeAnOffer();
+        this.showClientRequestsUserMadeAnOffer = true
       "
     >
       Show Only Requests I Made an Offer
