--- a/src/app/components/client-requests/components/client-request/client-request.component.html
+++ b/src/app/components/client-requests/components/client-request/client-request.component.html
@@ -7,7 +7,20 @@
       <button class="send-message" (click)="startAConversation()">
         Send Message
       </button>
-      <button class="send-offer" (click)="openProposalModal()">Propose</button>
+      <button
+        *ngIf="this.showClientRequestsUserMadeAnOffer"
+        class="send-offer"
+        (click)="openProposalModal()"
+      >
+        Show Proposal
+      </button>
+      <button
+        *ngIf="!this.showClientRequestsUserMadeAnOffer"
+        class="send-offer"
+        (click)="openProposalModal()"
+      >
+        Propose
+      </button>
     </div>
   </div>
   <div class="client-request-content">
