--- a/src/app/layouts/home-layout/proposal/proposal.component.css
+++ b/src/app/layouts/home-layout/proposal/proposal.component.css
@@ -43,10 +43,11 @@
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    margin: 8% auto;
     /* 15% from the top and centered */
-    padding: 20px;
     border: 1px solid #888;
     width: 80%;
     /* Could be more or less, depending on screen size */
@@ -65,4 +66,66 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.cross {
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+.header {
+    align-items: center;
+    padding: 1rem;
+    border-radius: 1rem 1rem 0 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: #21325E;
+    color: white;
+}
+
+.content {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 0 0 1rem 1rem;
+}
+
+.page-title {
+    margin-top: 1.5rem;
+}
+
+.client-request-title {
+    padding: 1rem;
+    font-weight: 600;
+    width: 100%;
+    outline: none;
+    border: none;
+    margin-top: 2px;
+}
+
+.client-request-title-container {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+    border: 1px solid #F1D00A;
+}
+
+.client-request-title::placeholder {
+    opacity: 0.7;
+}
+
+.button {
+    margin-top: 2rem;
+    width: 11rem;
+    text-align: center;
+    height: 3rem;
+    background-color: #D61C4E;
+    border: 0px;
+    color: white;
+    margin-right: 0.5rem;
+    cursor: pointer;
+    font-weight: 600;
+    white-space: nowrap;
+    align-self: flex-end;
 }
