--- a/src/app/layouts/app-bar/app-bar.component.css
+++ b/src/app/layouts/app-bar/app-bar.component.css
@@ -1,20 +1,27 @@
-.nav-container{
-  display: flex;
+.nav-container {
   background-color: #21325E;
   height: 4rem;
-  align-items: center;
   position: fixed;
   width: 100%;
   z-index: 1;
+  display: flex;
+  align-items: center;
 }
 
-.nav-title{
+.test {
+  display: flex;
+  align-items: center;
+  max-width: 1500px;
+  margin: auto;
+}
+
+.nav-title {
   margin-left: 1rem;
   color: white;
   cursor: pointer;
 }
 
-.nav-items{
+.nav-items {
   color: white;
   list-style: none;
   display: flex;
@@ -22,7 +29,7 @@
   white-space: nowrap;
 }
 
-.nav-item{
+.nav-item {
   margin-left: 1rem;
   margin-right: 1rem;
   padding-top: 10px;
@@ -30,17 +37,17 @@
   cursor: pointer;
 }
 
-.nav-item:hover{
+.nav-item:hover {
   border: 0px solid white;
   border-bottom-width: 1px;
 }
 
-.bi-search{
+.bi-search {
   color: white;
   margin-right: 0.5rem;
 }
 
-.search-container{
+.search-container {
   margin-left: 30%;
   width: 100rem;
   display: flex;
@@ -49,7 +56,7 @@
   border-bottom-width: 1px;
 }
 
-.nav-search{
+.nav-search {
   background-color: transparent;
   height: 2rem;
   width: 100%;
@@ -62,18 +69,18 @@
   font-size: 1.5rem;
 }
 
-.nav-search::placeholder{
+.nav-search::placeholder {
   color: white;
   font-size: 1rem;
 }
 
-.nav-end{
+.nav-end {
   display: flex;
   width: 100%;
   justify-content: end;
 }
 
-.nav-login{
+.nav-login {
   background-color: transparent;
   color: white;
   border: 0;
@@ -82,7 +89,7 @@
   cursor: pointer;
 }
 
-.nav-register{
+.nav-register {
   width: 7rem;
   text-align: center;
   height: 2.5rem;
@@ -95,7 +102,7 @@
   font-weight: 600;
 }
 
-.user{
+.user {
   color: white;
   font-weight: 600;
   margin-right: 2rem;
@@ -107,7 +114,7 @@
   padding-left: 15px;
 }
 
-.nav-categories{
+.nav-categories {
   display: flex;
   justify-content: center;
   align-items: center;
